--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,26 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    allprojects {
+        repositories {
+            jcenter()
+            maven { url "https://jitpack.io" }
+//        google()
         }
     }
 }
@@ -30,4 +44,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation project(path: ":netInterface-module")
+//    implementation 'com.github.mhwang7758:Common:1.0.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
+    api 'com.alibaba:arouter-api:1.4.1'
 }
