--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation project(path: ":netInterface-module")
-//    implementation 'com.github.mhwang7758:Common:1.0.0'
+//    implementation project(path: ":netInterface-module")
+    implementation 'com.github.mhwang7758:NetInterface:2.0.0'
+    implementation 'com.github.mhwang7758:Common:1.0.0'
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
-    api 'com.alibaba:arouter-api:1.4.1'
 }
